# alertas-regras-sinais

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
atualizacao/: index.html
docs/: atualizacao.md  execucao.md  index.md  painel.md  regras.md  sobre.md
etl/: main.py
etl/extract/: extract.py
etl/load/: load.py
etl/transform/: alvos.py  apontamento.py  consumo.py  enriquecimento.py  faro_certo.py  inspecoes.py  medidores.py  ocorrencias.py  prospeccao.py  regras_negocio.py
execucao/: index.html
painel/: index.html
regras/: index.html
search/: search_index.json
sobre/: index.html
stylesheets/: extra.css
tests/: test_alvos.py  test_extract.py  test_faro_certo.py  test_medidores_faro_certo.py  test_prospeccao.py  test_transform_apontamento.py  test_transform_consumo.py  test_transform_enriquecimento.py  test_transform_faro_certo.py  test_transform_inspecoes.py  test_transform_medidores.py  test_transform_ocorrencias.py  test_transform_regras_negocio.py
