[project]
name = "alertas-regras-sinais"
version = "0.1.0"
description = "Script para geração de alertas, regras e sinais com base em consumo, inspeção recente, nota de reclamação técnica e apontamento do leiturista"
authors = [
    {name = "Romulo",email = "romubah@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pip-audit (>=2.10.0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "blue (>=0.9.1,<0.10.0)",
    "isort (>=7.0.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "pydocstyle (>=6.3.0,<7.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "xlrd (>=2.0.2,<3.0.0)",
]

[tool.poetry]
packages = [{include = "etl"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "isort . && blue . && pydocstyle ."
test = "pytest -v"
run = "python -m etl.main"